--- a/src/main/resources/assets/trickster_lisp/lang/en_us.json
+++ b/src/main/resources/assets/trickster_lisp/lang/en_us.json
@@ -1,8 +1,11 @@
 {
   "item.trickster_lisp.transpiler": "Spell LISP Transpiler",
+  "item.trickster_lisp.paper_and_pencil": "Paper and Pencil",
   "trickster_lisp.screen.transpiler": "Spell LISP Transpiler",
   "trickster_lisp.screen.transpiler.load": "Load",
   "trickster_lisp.screen.transpiler.validate": "Validate",
   "trickster_lisp.screen.transpiler.store": "Store",
-  "trickster_lisp.tooltip.code": "Saved Code:"
+  "trickster_lisp.screen.paper_and_pencil": "Paper and Pencil",
+  "trickster_lisp.tooltip.code": "Saved Code:",
+  "trickster_lisp.item_group": "Trickster LISP"
 }
