--- a/src/main/resources/assets/trickster_lisp/lang/en_us.json
+++ b/src/main/resources/assets/trickster_lisp/lang/en_us.json
@@ -1,6 +1,7 @@
 {
   "item.trickster_lisp.transpiler": "Spell LISP Transpiler",
   "item.trickster_lisp.paper_and_pencil": "Paper and Pencil",
+  "item.trickster_lisp.tome_of_lispfoolery": "Tome of LISPfoolery",
   "trickster_lisp.screen.transpiler": "Spell LISP Transpiler",
   "trickster_lisp.screen.transpiler.load": "Load",
   "trickster_lisp.screen.transpiler.validate": "Validate",
