Reworked macros to be able to be persistent and a bunch of other stuff

--- a/src/main/resources/assets/trickster_lisp/lang/en_us.json
+++ b/src/main/resources/assets/trickster_lisp/lang/en_us.json
@@ -8,5 +8,6 @@
   "trickster_lisp.screen.transpiler.store": "Store",
   "trickster_lisp.screen.paper_and_pencil": "Paper and Pencil",
   "trickster_lisp.tooltip.code": "Saved Code:",
+  "trickster_lisp.tooltip.macros": "Saved LISP Macros: %d macro(s)",
   "trickster_lisp.item_group": "Trickster LISP"
 }
